# HOG

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  model.xml  runhogdetector  test_error  test_lost
src/: hogdetector.cpp  hogdetector.hpp  runhogdetector.cpp
